# ai-sub-agents

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  main.py  pyproject.toml
data/: sample_resume.md
data/sample_jobs/: first_real_job.md
src/: models.py  orchestrator.py  tracer.py
src/agents/: base.py  company_researcher.py  devils_advocate.py  gap_analyzer.py  job_analyzer.py  letter_writer.py
tests/: conftest.py  test_models.py  test_orchestrator.py  test_tracer.py
tests/test_agents/: test_base.py
